--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,10 @@
 sudo: required
 dist: trusty
+
 addons:
   apt_packages:
     - pandoc
-    - texlive-latex-base
-    - texlive-fonts-recommended
-
+    - texlive-full
 
 script:
   - ./scripts/build-book.sh
