--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
     "code-inlining": "node scripts/inline-source-code.js"
   },
   "dependencies": {
-    "ejs": "2.4.2",
-    "glob": "^7.0.5"
   },
   "devDependencies": {
     "chalk": "^1.1.3",
-    "glob": "^7.0.5"
+    "glob": "^7.0.5",
+    "mkdirp": "^0.5.1"
   }
 }
