--- a/demo/node-server/package.json
+++ b/demo/node-server/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "mustache": "^2.2.1",
     "nedb": "^1.8.0",
     "web-push": "^3.0.0"
   }
