--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
-sudo: false
+sudo: required
+dist: trusty
+cache:
+  directories:
+    - node_modules
 language: node_js
 node_js:
   - "6"
-cache:
-    apt: true
-    bundler: true
-    directories:
-      - node_modules
+
 addons:
   apt_packages:
     - pandoc
@@ -24,5 +24,5 @@ install:
   - npm install
 
 script:
-  - ./utils/build-book.sh
+  - ./shellscripts/build-book.sh
   - if [[ "$TRAVIS_BRANCH" = "master" && "$TRAVIS_OS_NAME" = "linux" && "$TRAVIS_PULL_REQUEST" = "false" ]]; then firebase deploy --token "$FIREBASE_TOKEN" --project default --non-interactive; fi
