--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@ source: ./build
 destination: ./build/_site/
 layouts_dir: ./jekyll/_layouts/
 includes_dir: ./jekyll/_includes/
+live_domain: https://web-push-book.gauntface.com
 
 exclude:
   - _content/chapter-01/00-info.md
