--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "chalk": "^1.1.3",
     "glob": "^7.0.5",
     "gulp": "github:gulpjs/gulp#4.0",
+    "gulp-changed": "^1.3.2",
+    "gulp-image-resize": "^0.10.0",
     "mkdirp": "^0.5.1"
   }
 }
