Adding some small changes to better support canonical and merging notification demos

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ source: ./build
 destination: ./build/_site/
 layouts_dir: ./jekyll/_layouts/
 includes_dir: ./jekyll/_includes/
-baseurl: https://web-push-book.gauntface.com
+url: https://web-push-book.gauntface.com
 
 exclude:
   - _content/chapter-01/00-info.md
