--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "test": "gulp build:prod && node ./test/utils/download-browsers.js && mocha"
+  },
   "dependencies": {
     "anchor-js": "^3.2.2",
     "cssnano": "^3.7.6",
@@ -14,6 +17,7 @@
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-changed": "^1.3.2",
     "gulp-image-resize": "^0.10.0",
-    "mkdirp": "^0.5.1"
+    "mkdirp": "^0.5.1",
+    "selenium-assistant": "^5.0.4"
   }
 }
