--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "scripts": {
-    "test": "gulp build:prod && node ./test/utils/download-browsers.js && mocha"
+    "test": "gulp build:prod && jekyll build && node ./test/utils/download-browsers.js && mocha"
   },
   "dependencies": {
     "anchor-js": "^3.2.2",
     "cssnano": "^3.7.6",
     "del": "^2.2.2",
+    "express": "^4.14.0",
     "gulp-cssimport": "^3.1.0",
     "gulp-imagemin": "^3.0.3",
     "gulp-postcss": "^6.2.0",
+    "mkdirp": "^0.5.1",
     "postcss-cssnext": "^2.8.0"
   },
   "devDependencies": {
@@ -17,7 +19,8 @@
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-changed": "^1.3.2",
     "gulp-image-resize": "^0.10.0",
-    "mkdirp": "^0.5.1",
-    "selenium-assistant": "^5.0.4"
+    "selenium-assistant": "^5.0.4",
+    "serve-index": "^1.8.0",
+    "serve-static": "^1.11.1"
   }
 }
