Replacing a few details

--- a/src/_content/_epub-metadata.yaml
+++ b/src/_content/_epub-metadata.yaml
@@ -7,5 +7,5 @@ title:
 creator:
 - role: author
   text: Matt Gaunt
-rights: © 2016 Matt Gaunt
+rights: © 2017 Matt Gaunt (CC Attribution-NonCommercial-NoDerivatives 4.0)
 ...
