--- a/src/demos/node-server/package.json
+++ b/src/demos/node-server/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "description": "A basic demonstration of a web server that handles push notifications.",
   "main": "index.js",
+  "engines": {
+    "node": ">=6.9.5"
+  },
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Matt Gaunt",
