--- a/package.json
+++ b/package.json
@@ -6,17 +6,17 @@
     "test": "echo 'No tests in project'"
   },
   "dependencies": {
-    "@hopin/hugo-base-theme": "0.0.317"
+    "@hopin/hugo-base-theme": "0.0.319"
   },
   "devDependencies": {
-    "@gauntface/html-asset-manager": "^1.0.4",
-    "@gauntface/hugo-node": "^1.0.7",
-    "@gauntface/web-push-book-theme": "^1.0.5",
-    "@hopin/wbt-clean": "0.0.122",
-    "browser-sync": "^2.26.7",
-    "fs-extra": "^9.0.0",
-    "gulp": "^4.0.2",
-    "gulp-htmlmin": "^5.0.1"
+    "@gauntface/html-asset-manager": "1.0.4",
+    "@gauntface/hugo-node": "1.0.9",
+    "@gauntface/web-push-book-theme": "1.0.9",
+    "@hopin/wbt-clean": "0.0.126",
+    "browser-sync": "2.26.7",
+    "fs-extra": "9.0.0",
+    "gulp": "4.0.2",
+    "gulp-htmlmin": "5.0.1"
   },
   "license": "Apache-2.0"
 }
