--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   },
   "devDependencies": {
     "@gauntface/html-asset-manager": "1.0.4",
-    "@gauntface/hugo-node": "1.0.15",
-    "@gauntface/web-push-book-theme": "1.0.15",
+    "@gauntface/hugo-node": "^1.0.16",
+    "@gauntface/web-push-book-theme": "^1.0.17",
     "@hopin/wbt-clean": "0.0.126",
     "browser-sync": "2.26.10",
     "fs-extra": "9.0.1",
