Update renovate to shared config

--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,5 @@
 {
-  "automerge": true,
-  "extends": [
-    "config:base"
-  ]
+    "extends": [
+      "local>gauntface/.github:renovate-config"
+    ]
 }
